--- a/week06/app.html
+++ b/week06/app.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple App</title>
 </head>
+<h1> Hello beautiful World!! I am building a fun app, how about that! </h1>
 <body>
     <script src='app.js'></script> 
+
 </body>
 </html>
